@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -74,35 +74,35 @@ import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
  * @author Phillip Webb
  * @author Sam Brannen
  */
-public class SpelReproTests extends AbstractExpressionTests {
+class SpelReproTests extends AbstractExpressionTests {
 
 	@Test
-	public void NPE_SPR5661() {
+	void NPE_SPR5661() {
 		evaluate("joinThreeStrings('a',null,'c')", "anullc", String.class);
 	}
 
 	@Test
-	public void SWF1086() {
+	void SWF1086() {
 		evaluate("printDouble(T(java.math.BigDecimal).valueOf(14.35))", "14.35", String.class);
 	}
 
 	@Test
-	public void doubleCoercion() {
+	void doubleCoercion() {
 		evaluate("printDouble(14.35)", "14.35", String.class);
 	}
 
 	@Test
-	public void doubleArrayCoercion() {
+	void doubleArrayCoercion() {
 		evaluate("printDoubles(getDoublesAsStringList())", "{14.35, 15.45}", String.class);
 	}
 
 	@Test
-	public void SPR5899() {
+	void SPR5899() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Spr5899Class());
 		Expression expr = new SpelExpressionParser().parseRaw("tryToInvokeWithNull(12)");
 		assertThat(expr.getValue(context)).isEqualTo(12);
 		expr = new SpelExpressionParser().parseRaw("tryToInvokeWithNull(null)");
-		assertThat(expr.getValue(context)).isEqualTo(null);
+		assertThat(expr.getValue(context)).isNull();
 		expr = new SpelExpressionParser().parseRaw("tryToInvokeWithNull2(null)");
 		assertThatExceptionOfType(EvaluationException.class).isThrownBy(
 				expr::getValue);
@@ -133,7 +133,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR5905_InnerTypeReferences() {
+	void SPR5905_InnerTypeReferences() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Spr5899Class());
 		Expression expr = new SpelExpressionParser().parseRaw("T(java.util.Map$Entry)");
 		assertThat(expr.getValue(context)).isEqualTo(Map.Entry.class);
@@ -146,7 +146,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR5804() {
+	void SPR5804() {
 		Map<String, String> m = new HashMap<>();
 		m.put("foo", "bar");
 		StandardEvaluationContext context = new StandardEvaluationContext(m);  // root is a map instance
@@ -156,7 +156,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR5847() {
+	void SPR5847() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new TestProperties());
 		String name = null;
 		Expression expr = null;
@@ -192,7 +192,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void NPE_SPR5673() {
+	void NPE_SPR5673() {
 		ParserContext hashes = TemplateExpressionParsingTests.HASH_DELIMITED_PARSER_CONTEXT;
 		ParserContext dollars = TemplateExpressionParsingTests.DEFAULT_TEMPLATE_PARSER_CONTEXT;
 
@@ -227,7 +227,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void propertyAccessOnNullTarget_SPR5663() throws AccessException {
+	void propertyAccessOnNullTarget_SPR5663() throws AccessException {
 		PropertyAccessor accessor = new ReflectivePropertyAccessor();
 		EvaluationContext context = TestScenarioCreator.getTestEvaluationContext();
 		assertThat(accessor.canRead(context, null, "abc")).isFalse();
@@ -239,7 +239,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void nestedProperties_SPR6923() {
+	void nestedProperties_SPR6923() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Foo());
 		Expression expr = new SpelExpressionParser().parseRaw("resource.resource.server");
 		String name = expr.getValue(context, String.class);
@@ -248,7 +248,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	/** Should be accessing Goo.getKey because 'bar' field evaluates to "key" */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_1() {
+	void indexingAsAPropertyAccess_SPR6968_1() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Goo());
 		String name = null;
 		Expression expr = null;
@@ -261,7 +261,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	/** Should be accessing Goo.getKey because 'bar' variable evaluates to "key" */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_2() {
+	void indexingAsAPropertyAccess_SPR6968_2() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Goo());
 		context.setVariable("bar", "key");
 		String name = null;
@@ -275,7 +275,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	/** $ related identifiers */
 	@Test
-	public void dollarPrefixedIdentifier_SPR7100() {
+	void dollarPrefixedIdentifier_SPR7100() {
 		Holder h = new Holder();
 		StandardEvaluationContext context = new StandardEvaluationContext(h);
 		context.addPropertyAccessor(new MapAccessor());
@@ -315,7 +315,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	/** Should be accessing Goo.wibble field because 'bar' variable evaluates to "wibble" */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_3() {
+	void indexingAsAPropertyAccess_SPR6968_3() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Goo());
 		context.setVariable("bar", "wibble");
 		String name = null;
@@ -333,7 +333,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * "wibble"
 	 */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_4() {
+	void indexingAsAPropertyAccess_SPR6968_4() {
 		Goo g = Goo.instance;
 		StandardEvaluationContext context = new StandardEvaluationContext(g);
 		context.setVariable("bar", "wibble");
@@ -348,7 +348,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	/** Should be accessing Goo.setKey field because 'bar' variable evaluates to "key" */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_5() {
+	void indexingAsAPropertyAccess_SPR6968_5() {
 		Goo g = Goo.instance;
 		StandardEvaluationContext context = new StandardEvaluationContext(g);
 		Expression expr = null;
@@ -360,7 +360,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void dollars() {
+	void dollars() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new XX());
 		Expression expr = null;
 		expr = new SpelExpressionParser().parseRaw("m['$foo']");
@@ -369,7 +369,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void dollars2() {
+	void dollars2() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new XX());
 		Expression expr = null;
 		expr = new SpelExpressionParser().parseRaw("m[$foo]");
@@ -421,7 +421,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	};
 
 	@Test
-	public void beanResolution() {
+	void beanResolution() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new XX());
 		Expression expr = null;
 
@@ -443,12 +443,12 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 		// bean does not exist
 		expr = new SpelExpressionParser().parseRaw("@bar");
-		assertThat(expr.getValue(context, String.class)).isEqualTo(null);
+		assertThat(expr.getValue(context, String.class)).isNull();
 
 		// bean name will cause AccessException
 		expr = new SpelExpressionParser().parseRaw("@goo");
 		try {
-			assertThat(expr.getValue(context, String.class)).isEqualTo(null);
+			assertThat(expr.getValue(context, String.class)).isNull();
 		}
 		catch (SpelEvaluationException see) {
 			assertThat(see.getMessageCode()).isEqualTo(SpelMessage.EXCEPTION_DURING_BEAN_RESOLUTION);
@@ -472,7 +472,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void elvis_SPR7209_1() {
+	void elvis_SPR7209_1() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new XX());
 		Expression expr = null;
 
@@ -482,14 +482,14 @@ public class SpelReproTests extends AbstractExpressionTests {
 		expr = new SpelExpressionParser().parseRaw("?:'default'");
 		assertThat(expr.getValue()).isEqualTo("default");
 		expr = new SpelExpressionParser().parseRaw("?:");
-		assertThat(expr.getValue()).isEqualTo(null);
+		assertThat(expr.getValue()).isNull();
 
 		// Different parts of ternary expression are null
 		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
 				new SpelExpressionParser().parseRaw("(?'abc':'default')").getValue(context))
 			.satisfies(ex -> assertThat(ex.getMessageCode()).isEqualTo(SpelMessage.TYPE_CONVERSION_ERROR));
 		expr = new SpelExpressionParser().parseRaw("(false?'abc':null)");
-		assertThat(expr.getValue()).isEqualTo(null);
+		assertThat(expr.getValue()).isNull();
 
 		// Assignment
 		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
@@ -498,7 +498,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void elvis_SPR7209_2() {
+	void elvis_SPR7209_2() {
 		Expression expr = null;
 		// Have empty string treated as null for elvis
 		expr = new SpelExpressionParser().parseRaw("?:'default'");
@@ -510,7 +510,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void mapOfMap_SPR7244() {
+	void mapOfMap_SPR7244() {
 		Map<String, Object> map = new LinkedHashMap<>();
 		map.put("uri", "http:");
 		Map<String, String> nameMap = new LinkedHashMap<>();
@@ -531,7 +531,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void projectionTypeDescriptors_1() {
+	void projectionTypeDescriptors_1() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new C());
 		SpelExpressionParser parser = new SpelExpressionParser();
 		String el1 = "ls.![#this.equals('abc')]";
@@ -540,11 +540,11 @@ public class SpelReproTests extends AbstractExpressionTests {
 		// value is list containing [true,false]
 		assertThat(value.get(0).getClass()).isEqualTo(Boolean.class);
 		TypeDescriptor evaluated = exp.getValueTypeDescriptor(context);
-		assertThat(evaluated.getElementTypeDescriptor()).isEqualTo(null);
+		assertThat(evaluated.getElementTypeDescriptor()).isNull();
 	}
 
 	@Test
-	public void projectionTypeDescriptors_2() {
+	void projectionTypeDescriptors_2() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new C());
 		SpelExpressionParser parser = new SpelExpressionParser();
 		String el1 = "as.![#this.equals('abc')]";
@@ -557,7 +557,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void projectionTypeDescriptors_3() {
+	void projectionTypeDescriptors_3() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new C());
 		SpelExpressionParser parser = new SpelExpressionParser();
 		String el1 = "ms.![key.equals('abc')]";
@@ -566,11 +566,11 @@ public class SpelReproTests extends AbstractExpressionTests {
 		// value is list containing [true,false]
 		assertThat(value.get(0).getClass()).isEqualTo(Boolean.class);
 		TypeDescriptor evaluated = exp.getValueTypeDescriptor(context);
-		assertThat(evaluated.getElementTypeDescriptor()).isEqualTo(null);
+		assertThat(evaluated.getElementTypeDescriptor()).isNull();
 	}
 
 	@Test
-	public void greaterThanWithNulls_SPR7840() {
+	void greaterThanWithNulls_SPR7840() {
 		List<D> list = new ArrayList<>();
 		list.add(new D("aaa"));
 		list.add(new D("bbb"));
@@ -605,7 +605,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * than a unboxing conversion.
 	 */
 	@Test
-	public void conversionPriority_SPR8224() throws Exception {
+	void conversionPriority_SPR8224() throws Exception {
 
 		@SuppressWarnings("unused")
 		class ConversionPriority1 {
@@ -637,7 +637,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 		ConversionPriority1 target = new ConversionPriority1();
 		MethodExecutor me = new ReflectiveMethodResolver(true).resolve(emptyEvalContext, target, "getX", args);
 		// MethodInvoker chooses getX(int i) when passing Integer
-		final int actual = (Integer) me.execute(emptyEvalContext, target, new Integer(42)).getValue();
+		final int actual = (Integer) me.execute(emptyEvalContext, target, Integer.valueOf(42)).getValue();
 		// Compiler chooses getX(Number i) when passing Integer
 		final int compiler = target.getX(INTEGER);
 		// Fails!
@@ -646,7 +646,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 		ConversionPriority2 target2 = new ConversionPriority2();
 		MethodExecutor me2 = new ReflectiveMethodResolver(true).resolve(emptyEvalContext, target2, "getX", args);
 		// MethodInvoker chooses getX(int i) when passing Integer
-		int actual2 = (Integer) me2.execute(emptyEvalContext, target2, new Integer(42)).getValue();
+		int actual2 = (Integer) me2.execute(emptyEvalContext, target2, Integer.valueOf(42)).getValue();
 		// Compiler chooses getX(Number i) when passing Integer
 		int compiler2 = target2.getX(INTEGER);
 		// Fails!
@@ -659,7 +659,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * method accepting 'long' is ok.
 	 */
 	@Test
-	public void wideningPrimitiveConversion_SPR8224() throws Exception {
+	void wideningPrimitiveConversion_SPR8224() throws Exception {
 
 		class WideningPrimitiveConversion {
 			public int getX(long i) {
@@ -667,7 +667,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 			}
 		}
 
-		final Integer INTEGER_VALUE = Integer.valueOf(7);
+		final Integer INTEGER_VALUE = 7;
 		WideningPrimitiveConversion target = new WideningPrimitiveConversion();
 		EvaluationContext emptyEvalContext = new StandardEvaluationContext();
 
@@ -682,7 +682,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void varargsAgainstProxy_SPR16122() {
+	void varargsAgainstProxy_SPR16122() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expr = parser.parseExpression("process('a', 'b')");
 
@@ -696,7 +696,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void testCompiledExpressionForProxy_SPR16191() {
+	void testCompiledExpressionForProxy_SPR16191() {
 		SpelExpressionParser expressionParser =
 				new SpelExpressionParser(new SpelParserConfiguration(SpelCompilerMode.IMMEDIATE, null));
 		Expression expression = expressionParser.parseExpression("#target.process(#root)");
@@ -715,7 +715,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void varargsAndPrimitives_SPR8174() throws Exception {
+	void varargsAndPrimitives_SPR8174() throws Exception {
 		EvaluationContext emptyEvalContext = new StandardEvaluationContext();
 		List<TypeDescriptor> args = new ArrayList<>();
 
@@ -763,7 +763,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void reservedWords_SPR8228() {
+	void reservedWords_SPR8228() {
 
 		// "DIV","EQ","GE","GT","LE","LT","MOD","NE","NOT"
 		@SuppressWarnings("unused")
@@ -814,7 +814,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void reservedWordProperties_SPR9862() {
+	void reservedWordProperties_SPR9862() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		SpelExpressionParser parser = new SpelExpressionParser();
 		SpelExpression expression = parser.parseRaw("T(org.springframework.expression.spel.testresources.le.div.mod.reserved.Reserver).CONST");
@@ -829,7 +829,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * in evaluation of SPEL expressions for a given context.
 	 */
 	@Test
-	public void propertyAccessorOrder_SPR8211() {
+	void propertyAccessorOrder_SPR8211() {
 		ExpressionParser expressionParser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new ContextObject());
 
@@ -849,7 +849,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * determines the set of methods for a type.
 	 */
 	@Test
-	public void customStaticFunctions_SPR9038() {
+	void customStaticFunctions_SPR9038() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		List<MethodResolver> methodResolvers = new ArrayList<>();
@@ -873,7 +873,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void array() {
+	void array() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = null;
@@ -902,7 +902,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatFunctionResolver() {
+	void SPR9486_floatFunctionResolver() {
 		Number expectedResult = Math.abs(-10.2f);
 		ExpressionParser parser = new SpelExpressionParser();
 		SPR9486_FunctionsClass testObject = new SPR9486_FunctionsClass();
@@ -914,7 +914,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_addFloatWithDouble() {
+	void SPR9486_addFloatWithDouble() {
 		Number expectedNumber = 10.21f + 10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -924,7 +924,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_addFloatWithFloat() {
+	void SPR9486_addFloatWithFloat() {
 		Number expectedNumber = 10.21f + 10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -934,7 +934,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_subtractFloatWithDouble() {
+	void SPR9486_subtractFloatWithDouble() {
 		Number expectedNumber = 10.21f - 10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -944,7 +944,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_subtractFloatWithFloat() {
+	void SPR9486_subtractFloatWithFloat() {
 		Number expectedNumber = 10.21f - 10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -954,7 +954,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_multiplyFloatWithDouble() {
+	void SPR9486_multiplyFloatWithDouble() {
 		Number expectedNumber = 10.21f * 10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -964,7 +964,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_multiplyFloatWithFloat() {
+	void SPR9486_multiplyFloatWithFloat() {
 		Number expectedNumber = 10.21f * 10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -974,7 +974,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatDivideByFloat() {
+	void SPR9486_floatDivideByFloat() {
 		Number expectedNumber = -10.21f / -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -984,7 +984,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatDivideByDouble() {
+	void SPR9486_floatDivideByDouble() {
 		Number expectedNumber = -10.21f / -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -994,7 +994,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatEqFloatUnaryMinus() {
+	void SPR9486_floatEqFloatUnaryMinus() {
 		Boolean expectedResult = -10.21f == -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1004,7 +1004,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatEqDoubleUnaryMinus() {
+	void SPR9486_floatEqDoubleUnaryMinus() {
 		Boolean expectedResult = -10.21f == -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1014,7 +1014,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatEqFloat() {
+	void SPR9486_floatEqFloat() {
 		Boolean expectedResult = 10.215f == 10.2109f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1024,7 +1024,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatEqDouble() {
+	void SPR9486_floatEqDouble() {
 		Boolean expectedResult = 10.215f == 10.2109;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1034,7 +1034,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatNotEqFloat() {
+	void SPR9486_floatNotEqFloat() {
 		Boolean expectedResult = 10.215f != 10.2109f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1044,7 +1044,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatNotEqDouble() {
+	void SPR9486_floatNotEqDouble() {
 		Boolean expectedResult = 10.215f != 10.2109;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1054,7 +1054,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatLessThanFloat() {
+	void SPR9486_floatLessThanFloat() {
 		Boolean expectedNumber = -10.21f < -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1064,7 +1064,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatLessThanDouble() {
+	void SPR9486_floatLessThanDouble() {
 		Boolean expectedNumber = -10.21f < -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1074,7 +1074,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatLessThanOrEqualFloat() {
+	void SPR9486_floatLessThanOrEqualFloat() {
 		Boolean expectedNumber = -10.21f <= -10.22f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1084,7 +1084,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatLessThanOrEqualDouble() {
+	void SPR9486_floatLessThanOrEqualDouble() {
 		Boolean expectedNumber = -10.21f <= -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1094,7 +1094,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatGreaterThanFloat() {
+	void SPR9486_floatGreaterThanFloat() {
 		Boolean expectedNumber = -10.21f > -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1104,7 +1104,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatGreaterThanDouble() {
+	void SPR9486_floatGreaterThanDouble() {
 		Boolean expectedResult = -10.21f > -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1114,7 +1114,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatGreaterThanOrEqualFloat() {
+	void SPR9486_floatGreaterThanOrEqualFloat() {
 		Boolean expectedNumber = -10.21f >= -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1124,7 +1124,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatGreaterThanEqualDouble() {
+	void SPR9486_floatGreaterThanEqualDouble() {
 		Boolean expectedResult = -10.21f >= -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1134,7 +1134,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatModulusFloat() {
+	void SPR9486_floatModulusFloat() {
 		Number expectedResult = 10.21f % 10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1144,7 +1144,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatModulusDouble() {
+	void SPR9486_floatModulusDouble() {
 		Number expectedResult = 10.21f % 10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1154,7 +1154,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatPowerFloat() {
+	void SPR9486_floatPowerFloat() {
 		Number expectedResult = Math.pow(10.21f, -10.2f);
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1164,7 +1164,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9486_floatPowerDouble() {
+	void SPR9486_floatPowerDouble() {
 		Number expectedResult = Math.pow(10.21f, 10.2);
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -1174,7 +1174,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9994_bridgeMethods() throws Exception {
+	void SPR9994_bridgeMethods() throws Exception {
 		ReflectivePropertyAccessor accessor = new ReflectivePropertyAccessor();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		GenericImplementation target = new GenericImplementation();
@@ -1187,7 +1187,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10162_onlyBridgeMethod() throws Exception {
+	void SPR10162_onlyBridgeMethod() throws Exception {
 		ReflectivePropertyAccessor accessor = new ReflectivePropertyAccessor();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Object target = new OnlyBridgeMethod();
@@ -1197,7 +1197,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10091_simpleTestValueType() {
+	void SPR10091_simpleTestValueType() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new BooleanHolder());
 		Class<?> valueType = parser.parseExpression("simpleProperty").getValueType(evaluationContext);
@@ -1205,7 +1205,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10091_simpleTestValue() {
+	void SPR10091_simpleTestValue() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new BooleanHolder());
 		Object value = parser.parseExpression("simpleProperty").getValue(evaluationContext);
@@ -1213,7 +1213,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10091_primitiveTestValueType() {
+	void SPR10091_primitiveTestValueType() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new BooleanHolder());
 		Class<?> valueType = parser.parseExpression("primitiveProperty").getValueType(evaluationContext);
@@ -1221,7 +1221,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10091_primitiveTestValue() {
+	void SPR10091_primitiveTestValue() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new BooleanHolder());
 		Object value = parser.parseExpression("primitiveProperty").getValue(evaluationContext);
@@ -1229,7 +1229,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR16123() {
+	void SPR16123() {
 		ExpressionParser parser = new SpelExpressionParser();
 		parser.parseExpression("simpleProperty").setValue(new BooleanHolder(), null);
 		assertThatExceptionOfType(EvaluationException.class).isThrownBy(() ->
@@ -1237,7 +1237,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10146_malformedExpressions() {
+	void SPR10146_malformedExpressions() {
 		doTestSpr10146("/foo", "EL1070E: Problem parsing left operand");
 		doTestSpr10146("*foo", "EL1070E: Problem parsing left operand");
 		doTestSpr10146("%foo", "EL1070E: Problem parsing left operand");
@@ -1255,7 +1255,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10125() {
+	void SPR10125() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		String fromInterface = parser.parseExpression("T(" + StaticFinalImpl1.class.getName() + ").VALUE").getValue(
 				context, String.class);
@@ -1266,7 +1266,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10210() {
+	void SPR10210() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		context.setVariable("bridgeExample", new org.springframework.expression.spel.spr10210.D());
 		Expression parseExpression = parser.parseExpression("#bridgeExample.bridgeMethod()");
@@ -1274,14 +1274,14 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10328() {
+	void SPR10328() {
 		assertThatExceptionOfType(SpelParseException.class).isThrownBy(() ->
 				parser.parseExpression("$[]"))
 			.withMessageContaining("EL1071E: A required selection expression has not been specified");
 	}
 
 	@Test
-	public void SPR10452() {
+	void SPR10452() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(false, false);
 		ExpressionParser parser = new SpelExpressionParser(configuration);
 
@@ -1306,7 +1306,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9495() {
+	void SPR9495() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(false, false);
 		ExpressionParser parser = new SpelExpressionParser(configuration);
 
@@ -1347,7 +1347,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10486() {
+	void SPR10486() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Spr10486 rootObject = new Spr10486();
@@ -1358,7 +1358,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR11142() {
+	void SPR11142() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Spr11142 rootObject = new Spr11142();
@@ -1369,7 +1369,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9194() {
+	void SPR9194() {
 		TestClass2 one = new TestClass2("abc");
 		TestClass2 two = new TestClass2("abc");
 		Map<String, TestClass2> map = new HashMap<>();
@@ -1382,7 +1382,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR11348() {
+	void SPR11348() {
 		Collection<String> coll = new LinkedHashSet<>();
 		coll.add("one");
 		coll.add("two");
@@ -1399,14 +1399,14 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR11445_simple() {
+	void SPR11445_simple() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Spr11445Class());
 		Expression expr = new SpelExpressionParser().parseRaw("echo(parameter())");
 		assertThat(expr.getValue(context)).isEqualTo(1);
 	}
 
 	@Test
-	public void SPR11445_beanReference() {
+	void SPR11445_beanReference() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		context.setBeanResolver(new Spr11445Class());
 		Expression expr = new SpelExpressionParser().parseRaw("@bean.echo(@bean.parameter())");
@@ -1415,14 +1415,14 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	@Test
 	@SuppressWarnings("unchecked")
-	public void SPR11494() {
+	void SPR11494() {
 		Expression exp = new SpelExpressionParser().parseExpression("T(java.util.Arrays).asList('a','b')");
 		List<String> list = (List<String>) exp.getValue();
 		assertThat(list).hasSize(2);
 	}
 
 	@Test
-	public void SPR11609() {
+	void SPR11609() {
 		StandardEvaluationContext sec = new StandardEvaluationContext();
 		sec.addPropertyAccessor(new MapAccessor());
 		Expression exp = new SpelExpressionParser().parseExpression(
@@ -1431,7 +1431,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR9735() {
+	void SPR9735() {
 		Item item = new Item();
 		item.setName("parent");
 
@@ -1453,7 +1453,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR12502() {
+	void SPR12502() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("#root.getClass().getName()");
 		assertThat(expression.getValue(new UnnamedUser())).isEqualTo(UnnamedUser.class.getName());
@@ -1462,7 +1462,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	@Test
 	@SuppressWarnings("rawtypes")
-	public void SPR12522() {
+	void SPR12522() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("T(java.util.Arrays).asList('')");
 		Object value = expression.getValue();
@@ -1471,7 +1471,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR12803() {
+	void SPR12803() {
 		StandardEvaluationContext sec = new StandardEvaluationContext();
 		sec.setVariable("iterable", Collections.emptyList());
 		SpelExpressionParser parser = new SpelExpressionParser();
@@ -1480,7 +1480,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR12808() {
+	void SPR12808() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("T(org.springframework.expression.spel.SpelReproTests.DistanceEnforcer).from(#no)");
 		StandardEvaluationContext sec = new StandardEvaluationContext();
@@ -1496,7 +1496,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	@Test
 	@SuppressWarnings("rawtypes")
-	public void SPR13055() {
+	void SPR13055() {
 		List<Map<String, Object>> myPayload = new ArrayList<>();
 
 		Map<String, Object> v1 = new HashMap<>();
@@ -1527,7 +1527,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void AccessingFactoryBean_spr9511() {
+	void AccessingFactoryBean_spr9511() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		context.setBeanResolver(new MyBeanResolver());
 		Expression expr = new SpelExpressionParser().parseRaw("@foo");
@@ -1551,7 +1551,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR12035() {
+	void SPR12035() {
 		ExpressionParser parser = new SpelExpressionParser();
 
 		Expression expression1 = parser.parseExpression("list.?[ value>2 ].size()!=0");
@@ -1562,7 +1562,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR13055_maps() {
+	void SPR13055_maps() {
 		EvaluationContext context = new StandardEvaluationContext();
 		ExpressionParser parser = new SpelExpressionParser();
 
@@ -1578,7 +1578,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	@Test
 	@SuppressWarnings({ "unchecked", "rawtypes" })
-	public void SPR10417() {
+	void SPR10417() {
 		List list1 = new ArrayList();
 		list1.add("a");
 		list1.add("b");
@@ -1619,7 +1619,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	@Test
 	@SuppressWarnings({ "unchecked", "rawtypes" })
-	public void SPR10417_maps() {
+	void SPR10417_maps() {
 		Map map1 = new HashMap();
 		map1.put("A", 65);
 		map1.put("B", 66);
@@ -1642,7 +1642,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR13918() {
+	void SPR13918() {
 		EvaluationContext context = new StandardEvaluationContext();
 		context.setVariable("encoding", "UTF-8");
 
@@ -1652,7 +1652,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR16032() {
+	void SPR16032() {
 		EvaluationContext context = new StandardEvaluationContext();
 		context.setVariable("str", "a\0b");
 
